# CommonTools

./: .clang-format  .gitignore  .travis.yml  README.md  installpy_standalone.sh  setup.sh  setup_env.sh
Factories/: .gitignore  CMakeLists.txt  README.md
Factories/cmake/modules/: BuildExternals.cmake
Factories/include/: Factory.h  HistFactory.h  TreeFactory.h  config.h.in
Factories/scripts/: createFactory.sh.in  parallelizedFactory.py.in
Factories/src/: Factory.cc  HistFactory.cc  TreeFactory.cc  createFactory.cc
Factories/templates/: CMakeLists.txt.tpl  Group.tpl  Main.cc.tpl  Main.h.tpl  Plot.tpl  PlotNoCheckData.tpl  SavePlot.tpl
Factories/test/: plots.py  sample.json  tree.py
cmake/modules/: BuildExternals.cmake  CMSSW.cmake  CMakeCheckCompilerFlagCommonPatterns.cmake  CP3Dictionaries.cmake  CheckCXXCompilerFlag.cmake  FindBoost.cmake  FindROOT.cmake
common/include/: IndexRangeIterator.h  ScaleFactors.h  formula_parser.h  kinematics.h  scale_factors.h
common/src/: formula_parser.cpp  scale_factors.cpp
common/tests/: Makefile  formula_parser_tests.cpp  scale_factors_test.cpp  tests.cpp
condor/: condorExample.py
histFactory/: .gitignore  CMakeLists.txt  README.md  condorExample.py  condorTools.py  createSampleJson.py
histFactory/cmake/modules/: BuildExternals.cmake  CMSSW.cmake  FindROOT.cmake
histFactory/plots/: leptons_kin.json
histFactory/plots/HHAnalysis/: ScaleFactors.py  basePlotter.py  generatePlots.py  leptons_iso.json  mapFacilities.py
histFactory/plots/TTAnalysis/: ScaleFactors.py  TTAnalysis.py  basePlots.py  generatePlots.py  myTTplots_elel_bb.json  myTTplots_elel_bb_MET.json  myTTplots_elel_jj.json  myTTplots_elmu_bb.json  myTTplots_elmu_bb_MET.json  myTTplots_elmu_jj.json  myTTplots_muel_bb.json  myTTplots_muel_bb_MET.json  myTTplots_muel_jj.json  myTTplots_mumu_bb.json  myTTplots_mumu_bb_MET.json  myTTplots_mumu_jj.json  normAndSmoothTransferFunctions.py  plotTools.py  transferFunctions.py
histFactory/plots/ZAAnalysis/: generatePlotsJSON.py  generatePlotsJSON_v2.py  plots_twoMuTwojets.json
histFactory/samples/TTAnalysis/: DataSamples.json
histFactory/samples/TTAnalysis/15_November_Prod/: DY.json  DoubleEG.json  DoubleMuon.json  MuonEG.json  ST.json  TT.json  TT_diLep.json  TT_hadr.json  TT_semiLep.json  VV.json  Wjets.json
histFactory/samples/TTAnalysis/15_October_Prod/: DYSamples.json  DataDoubleEG.json  DataDoubleMuon.json  DataMuonEG.json  TTbarSample.json  singleTop_tChannel.json  singleTop_tW.json
histFactory/samples/TTAnalysis/15_September_Prod/: DYSamples.json  TopSamples.json
histFactory/samples/ZAAnalysis/15_October_Prod/: samples.json
histFactory/scripts/: createPlotter.sh.in  parallelizedPlotter.py.in
histFactory/src/: createHistoWithMultiDraw.cpp  createPlotter.cpp  formula_parser.cpp  formula_parser.h
histFactory/templates/: CMakeLists.txt  CMakeLists.txt.tpl  EnsureNormalization.tpl  Plot.tpl  Plotter.cc.tpl  Plotter.h.tpl  SavePlot.tpl
histFactory/test/: plots.py  sample.json
mvaTraining/: .gitignore  tmvaTools.py
mvaTraining/HHAnalysis/: Makefile  mergeMVA.py  train.cc  trainMVA.py
plotUtils/: .gitignore  Makefile  README.md  compareSN.C  compareSN.py  compile.sh  countProcessedEvents.cpp  createHistoWithMultiDraw.cpp  createHistos.cpp  createHistos.py  createSampleJson.py
plotUtils/plots/: dilepton_kin.json  dilepton_kin_isocut.json  example.py  leptons_iso.json  leptons_kin.json
plotUtils/samples/: HHanalysis_samples.json
python/: CMSStyle.py  HistogramTools.py  __init__.py  batchhelpers.py  condorTools.py  condorhelpers.py  factoryhelpers.py  hist_opt_2v2.py  histfactory.py  lldeco.py  nanoaoddeco.py  plotithelpers.py  plots.py  samadhi_imports.py  scalefactors.py  slurmTools.py  slurmhelpers.py  treedecorators.py  treefactory.py
scripts/: CMS_lumi.py  addHistos.py  checkJobsAndResubmit.py  createSampleJson.py  createScaleSystematics.py  example_plotsHtoZA.py  flattenDistribution.py  flattenTH2.py  getEnvelopHistogram.py  nanoAODInteractive.py  plotFrameworkJSON.py
slurm/: slurmExample.py
templates/: CMakeLists_plotter.txt.tpl  CMakeLists_skimmer.txt.tpl  Plotter.cc.tpl  Plotter.h.tpl  Skimmer.cc.tpl  Skimmer.h.tpl
toolBox/: drawCanvas.py  rocCurveFacility.py
treeFactory/: CMakeLists.txt  README.md  resubmit.py  skimInDB.py
treeFactory/HHAnalysis/: generateTrees.py  skimInDB.py
treeFactory/cmake/modules/: FindPythonLibs.cmake
treeFactory/scripts/: createSkimmer.sh.in  parallelizedSkimmer.py.in
treeFactory/skimmer/: createSkimmer.cc
treeFactory/src/: createSkimmer.cc
treeFactory/templates/: CMakeLists.txt  CMakeLists.txt.tpl  Skimmer.cc.tpl  Skimmer.h.tpl  generateHeader.sh
treeFactory/test/: plots.py  sample.json  tree.py
treeFactory/test/HHAnalysis/: generateTrees.py
